[package]
name = "tt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
chrono = "0.4"
notify-rust = "4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Media_Audio", "Win32_Media"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
